--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         var assert = chai.assert;
     </script>
     <script src="../factory-functions/settings-bill-factory.js"></script>
-    <script src="../tests/settings-bill.test.js"></script>
+    <script src="settings-bill.test.js"></script>
 
     <script src="../factory-functions/calculate-bill-factory.js"></script>
     <script src="../tests/calculate-bill.test.js"></script>
