--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         var assert = chai.assert;
     </script>
     <script src="../factory-functions/settings-bill-factory.js"></script>
-    <script src="settings-bill.test.js"></script>
+    <script src="../tests/settings-bill.test.js"></script>
 
     <script src="../factory-functions/calculate-bill-factory.js"></script>
     <script src="../tests/calculate-bill.test.js"></script>
@@ -25,7 +25,7 @@
     <script src="../tests/radio-bill.test.js"></script>
 
     <script src="../factory-functions/text-bill-factory.js"></script>
-    <script src="../tests/text-bill.test.js"></script>
+    <script src="..tests/text-bill.test.js"></script>
 
     <script>
         mocha.checkLeaks();
