--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         mocha.setup('bdd');
         var assert = chai.assert;
     </script>
-    <script src="../factory-functions/settings-bill-factory.js"></script>
+    <script src="settings-bill-factory.js"></script>
     <script src="../tests/settings-bill.test.js"></script>
 
-    <script src="../factory-functions/calculate-bill-factory.js"></script>
+    <script src="calculate-bill-factory.js"></script>
     <script src="../tests/calculate-bill.test.js"></script>
 
-    <script src="../factory-functions/radio-bill-factory.js"></script>
+    <script src="radio-bill-factory.js"></script>
     <script src="../tests/radio-bill.test.js"></script>
 
-    <script src="../factory-functions/text-bill-factory.js"></script>
+    <script src="text-bill-factory.js"></script>
     <script src="..tests/text-bill.test.js"></script>
 
     <script>
